iptables.rules
# Generated by iptables-save v1.8.4 on Tue Dec 14 12:44:02 2021
*filter
:INPUT ACCEPT [47:3933]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [272:44761]
:sshguard - [0:0]
-A INPUT -s 193.191.177.6/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22345 -j ACCEPT
-A INPUT -s 192.168.255.0/24 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -j ACCEPT
-A INPUT -s 193.191.177.1/32 -j ACCEPT
COMMIT
# Completed on Tue Dec 14 12:44:02 2021
